--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
 #eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
+#eureka.client.service-url.defaultZone=http://172.20.10.5:8761/eureka
+#eureka.client.service-url.defaultZone=http://18.118.188.44:8761/eureka
+
+
+											 
+
+
+#http://18.118.188.44:8761/
 
 #
 #server.servlet.contextPath=/swagger2-demo
