--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,19 @@
 				<artifactId>junit</artifactId>
 				<version>4.8.1</version>
 			</plugin>
+			<plugin>
+			<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.3.0.603</version>
+				<executions>
+				<execution>
+				<phase>verify</phase>
+				<goals>
+				<goal>sonar</goal>
+				</goals>
+				</execution>
+				</executions>
+			</plugin>
 		
 		
 		<!-- jacoco end -->
